--- a/Chess.Web/Chess.Web.csproj
+++ b/Chess.Web/Chess.Web.csproj
@@ -447,8 +447,9 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="App\app.ts" />
+    <TypeScriptCompile Include="App\Chess\Model\ChessboardManager.ts" />
     <TypeScriptCompile Include="App\Chess\ChessController.ts" />
+    <TypeScriptCompile Include="App\Chess\Model\Piece.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-animate.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-cookies.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-mocks.d.ts" />
