--- a/Chess.Web/Chess.Web.csproj
+++ b/Chess.Web/Chess.Web.csproj
@@ -450,6 +450,7 @@
     <TypeScriptCompile Include="App\Chess\Model\ChessboardManager.ts" />
     <TypeScriptCompile Include="App\Chess\ChessController.ts" />
     <TypeScriptCompile Include="App\Chess\Model\Piece.ts" />
+    <TypeScriptCompile Include="App\Chess\Model\PieceType.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-animate.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-cookies.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-mocks.d.ts" />
