Creation of a failing test for piece's legal moves. Modifications in a model for it to compile and run.

--- a/Chess.Core/Chess.Core.csproj
+++ b/Chess.Core/Chess.Core.csproj
@@ -41,8 +41,11 @@
   <ItemGroup>
     <Compile Include="Model\Chessboard.cs" />
     <Compile Include="Enums\PieceType.cs" />
+    <Compile Include="Exceptions\IllegalMoveException.cs" />
+    <Compile Include="Model\Coordinates.cs" />
     <Compile Include="Model\Row.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PieceLegalMoves.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
