Change of Piece representation to a struct. Modifications in tests.

--- a/Chess.Core/Chess.Core.csproj
+++ b/Chess.Core/Chess.Core.csproj
@@ -39,10 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\PieceColor.cs" />
     <Compile Include="Model\Chessboard.cs" />
     <Compile Include="Enums\PieceType.cs" />
     <Compile Include="Exceptions\IllegalMoveException.cs" />
     <Compile Include="Model\Coordinates.cs" />
+    <Compile Include="Model\Piece.cs" />
     <Compile Include="Model\Row.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PieceLegalMoves.cs" />
