--- a/Chess.Tests/packages.config
+++ b/Chess.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ApprovalTests" version="3.0.7" targetFramework="net451" />
+  <package id="ApprovalUtilities" version="3.0.7" targetFramework="net451" />
   <package id="FakeItEasy" version="1.22.0" targetFramework="net451" />
   <package id="xunit" version="1.9.2" targetFramework="net451" />
 </packages>
