--- a/Chess.Core/Chess.Core.csproj
+++ b/Chess.Core/Chess.Core.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Model\Piece.cs" />
     <Compile Include="Model\Row.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\PieceLegalMoves.cs" />
+    <Compile Include="Services\PieceLegalMovesService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
